<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/SearchtLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recordsTotalTextView"
        app:layout_constraintTop_toBottomOf="@+id/recordsTotalTextView">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_or_surname" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/recordsTotalTextView"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/records_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recordsTotal"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/recordsTotalTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foundRecordsTextView"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/found_records"
        app:layout_constraintStart_toStartOf="@+id/recordsTotalTextView"
        app:layout_constraintTop_toBottomOf="@+id/SearchtLinearLayout" />

    <TextView
        android:id="@+id/foundRecords"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/foundRecordsTextView"
        app:layout_constraintTop_toTopOf="@+id/foundRecordsTextView" />

    <Button
        android:id="@+id/personAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="@+id/recordsTotalTextView"
        app:layout_constraintTop_toBottomOf="@+id/foundRecordsTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>